--- a/V1_p1/VC_P1.ipynb
+++ b/V1_p1/VC_P1.ipynb
@@ -40623,8 +40623,7 @@
     "    min_intensity = np.min(color_frame)\n",
     "    max_intensity = np.max(color_frame)\n",
     "\n",
-    "    # Encuentra las coordenadas de los píxeles más oscuros y más brillantesç\n",
-    "    print(min_intensity)\n",
+    "    # Encuentra las coordenadas de los píxeles más oscuros y más brillantes\n",
     "    dark_pixel_coords = np.argwhere(color_frame == min_intensity)\n",
     "    bright_pixel_coords = np.argwhere(color_frame == max_intensity)\n",
     "\n",
