--- a/V1_p22/VC_P2.ipynb
+++ b/V1_p22/VC_P2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "(0.0, 512.0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "(0.0, 256.0)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -563,13 +563,13 @@
     "# Convertir la imagen de derivadas de Sobel a 8 bits (rango de valores 0 a 255)\n",
     "sobel8 = np.uint8(np.sqrt(sobelx**2 + sobely**2))\n",
     "\n",
-    "# Aplicar umbralizado a la imagen de Sobel para obtener una imagen binaria\n",
-    "umbral = 150  # Puedes ajustar este valor\n",
-    "_, imagenUmbralizada = cv2.threshold(sobel8, umbral, 255, cv2.THRESH_BINARY)\n",
+    "# Aplicar umbralizado a la imagen de Sobel\n",
+    "umbral_sobel = 100  # Puedes ajustar este valor\n",
+    "_, imagen_umbral_sobel = cv2.threshold(sobel8, umbral_sobel, 255, cv2.THRESH_BINARY)\n",
     "\n",
     "# Calcular el conteo de píxeles blancos por filas y columnas\n",
-    "row_counts = cv2.reduce(imagenUmbralizada, 1, cv2.REDUCE_SUM, dtype=cv2.CV_32SC1)\n",
-    "col_counts = cv2.reduce(imagenUmbralizada, 0, cv2.REDUCE_SUM, dtype=cv2.CV_32SC1)\n",
+    "row_counts = cv2.reduce(imagen_umbral_sobel, 1, cv2.REDUCE_SUM, dtype=cv2.CV_32SC1)\n",
+    "col_counts = cv2.reduce(imagen_umbral_sobel, 0, cv2.REDUCE_SUM, dtype=cv2.CV_32SC1)\n",
     "\n",
     "# Calcular los máximos por filas y columnas\n",
     "max_row = np.max(row_counts)\n",
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -653,9 +653,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/omar/Desktop/VC/VC/V1_p22/VC_P2.ipynb Celda 26\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/V1_p22/VC_P2.ipynb#X31sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m         pframe \u001b[39m=\u001b[39m frame\u001b[39m.\u001b[39mcopy()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/V1_p22/VC_P2.ipynb#X31sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     \u001b[39m# Detenemos pulsado ESC\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/V1_p22/VC_P2.ipynb#X31sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     \u001b[39mif\u001b[39;00m cv2\u001b[39m.\u001b[39mwaitKey(\u001b[39m20\u001b[39m) \u001b[39m==\u001b[39m \u001b[39m27\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/V1_p22/VC_P2.ipynb#X31sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m         \u001b[39mbreak\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/V1_p22/VC_P2.ipynb#X31sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39m# Libera el objeto de captura\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "vid = cv2.VideoCapture(0)\n",
     "\n",
@@ -695,9 +707,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/omar/Desktop/VC/VC/V1_p22/VC_P2.ipynb Celda 28\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/V1_p22/VC_P2.ipynb#X33sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m eliminadorFondo \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mcreateBackgroundSubtractorMOG2(history\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m, varThreshold\u001b[39m=\u001b[39m\u001b[39m50\u001b[39m, detectShadows\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/V1_p22/VC_P2.ipynb#X33sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mwhile\u001b[39;00m(\u001b[39mTrue\u001b[39;00m):      \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/V1_p22/VC_P2.ipynb#X33sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39m# fotograma a fotograma\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/V1_p22/VC_P2.ipynb#X33sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     ret, frame \u001b[39m=\u001b[39m vid\u001b[39m.\u001b[39mread()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/V1_p22/VC_P2.ipynb#X33sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39mif\u001b[39;00m ret:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/V1_p22/VC_P2.ipynb#X33sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m         \u001b[39m# Aplica efecto espejo sobre la entrada\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/V1_p22/VC_P2.ipynb#X33sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m         framem\u001b[39m=\u001b[39mcv2\u001b[39m.\u001b[39mflip(frame, \u001b[39m1\u001b[39m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mEl Kernel se bloqueó al ejecutar código en la celda actual o en una celda anterior. Revise el código de las celdas para identificar una posible causa del error. Haga clic <a href='https://aka.ms/vscodeJupyterKernelCrash'>aquí</a> para obtener más información. Vea el [registro] de Jupyter (command:jupyter.viewOutput) para obtener más detalles."
+     ]
+    }
+   ],
    "source": [
     "vid = cv2.VideoCapture(0)\n",
     "\n",
@@ -761,9 +793,7 @@
     "\n",
     "Detección de Contornos (Canny): Mostrar cómo se aplican operaciones de detección de bordes, como el operador Canny, para resaltar los bordes de los objetos en tiempo real.\n",
     "\n",
-    "Histograma: Mostrar cómo se calcula y normaliza el histograma de una imagen en escala de grises en tiempo real. Esto puede ayudar a explicar cómo se distribuyen los niveles de intensidad en la imagen.\n",
-    "\n",
-    "La elección de las funciones a mostrar dependerá de la audiencia y el nivel de detalle que desees proporcionar. Puedes combinar varias de estas funciones para demostrar cómo se pueden aplicar diferentes técnicas de procesamiento de imágenes en tiempo real para lograr resultados visuales interesantes. Asegúrate de explicar de manera clara y concisa cada técnica mientras la demuestras."
+    "Histograma: Mostrar cómo se calcula y normaliza el histograma de una imagen en escala de grises en tiempo real. Esto puede ayudar a explicar cómo se distribuyen los niveles de intensidad en la imagen.\n"
    ]
   },
   {
@@ -789,7 +819,7 @@
     "\n",
     "Visualización de Datos en el Mundo Real: Crea una aplicación que permita a los usuarios visualizar datos o información relevante en el mundo real utilizando realidad aumentada. Por ejemplo, podrías superponer datos meteorológicos, información de tráfico o datos de redes sociales en tiempo real sobre la vista de la cámara del usuario.\n",
     "\n",
-    "Estas son solo algunas ideas para reinterpretar el procesamiento de imágenes con técnicas creativas y funcionales. El enfoque que elijas dependerá de tus intereses y de la audiencia a la que te dirijas. Asegúrate de investigar y experimentar con las técnicas de procesamiento de imágenes y realidad aumentada necesarias para llevar a cabo tu proyecto.\n",
+    "\n",
     "\n",
     "\n",
     "\n"
