--- a/V1_p4/VC_P4.ipynb
+++ b/V1_p4/VC_P4.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,10 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Camera 0\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "normalizatorHS = faceutils.Normalization()\n",
     "\n",
     "# Face detectors interface\n",
@@ -141,6 +150,111 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Camera 0\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not broadcast input array from shape (219,219,4) into shape (0,219,3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\guill\\OneDrive\\Documentos\\VC\\VC\\V1_p4\\VC_P4.ipynb Cell 6\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m pumpkin_y \u001b[39m=\u001b[39m y \u001b[39m-\u001b[39m resized_image\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m \u001b[39m# Colocamos la calabaza en la cabeza\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m frame[pumpkin_y:pumpkin_y \u001b[39m+\u001b[39;49m resized_image\u001b[39m.\u001b[39;49mshape[\u001b[39m0\u001b[39;49m], pumpkin_x:pumpkin_x \u001b[39m+\u001b[39;49m resized_image\u001b[39m.\u001b[39;49mshape[\u001b[39m1\u001b[39;49m]] \u001b[39m=\u001b[39m resized_image\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m \u001b[39m#Aplicamos filtros al frame\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m cv2\u001b[39m.\u001b[39mimshow(\u001b[39m'\u001b[39m\u001b[39mHalloween\u001b[39m\u001b[39m'\u001b[39m,frame)\n",
+      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (219,219,4) into shape (0,219,3)"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import imutils #redimensionar\n",
+    "import numpy as np\n",
+    "\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "pumpkin = cv2.imread(\"pumpkin3.png\",cv2.IMREAD_UNCHANGED)\n",
+    "#print('pumpkin.shape =',pumpkin.shape)\n",
+    "#cv2.imshow('pumpkin',pumpkin[:,:,3])\n",
+    "faceClassif = cv2.CascadeClassifier(cv2.data.haarcascades + \"haarcascade_frontalface_default.xml\")\n",
+    "\n",
+    "# Check for other cameras\n",
+    "if not cap.isOpened():\n",
+    "    cap = cv2.VideoCapture(1)\n",
+    "    if not cap.isOpened():\n",
+    "        cap = cv2.VideoCapture(0)\n",
+    "        if not cap.isOpened():\n",
+    "            print('Camera error')\n",
+    "            exit(0)\n",
+    "        else:\n",
+    "            print('Camera 0')\n",
+    "    else:\n",
+    "        print('Camera 1')\n",
+    "else:\n",
+    "    print('Camera 0')\n",
+    "\n",
+    "\n",
+    "while True:\n",
+    "  ret, frame = cap.read()\n",
+    "  if ret == False:\n",
+    "    break\n",
+    "  \n",
+    "  faces = faceClassif.detectMultiScale(frame,1.3,5)\n",
+    " \n",
+    "  for (x,y,w,h) in faces:\n",
+    "    #cv2.rectangle(frame, (x - 50, y - 25), (x + w+50, y + h+25), (0, 255, 0), 2)\n",
+    "      #Redimensionar la imagen \n",
+    "    resized_image = imutils.resize(pumpkin,width=w,height=h)\n",
+    "    filas_img = resized_image.shape[0]\n",
+    "    col_img = w\n",
+    "\n",
+    "    n_frame = frame[y: y + h, x: x + w]\n",
+    "    mask = resized_image[:,:,3]\n",
+    "    mask_inv=cv2.bitwise_not(mask)\n",
+    "    bg_black= cv2.bitwise_and(resized_image,resized_image,mask=mask)\n",
+    "    bg_black= bg_black[:,:,0:3]\n",
+    "    bg_frame = cv2.bitwise_and(n_frame,n_frame,mask=mask_inv)\n",
+    "\n",
+    "    #Sumamos las dos imagenes\n",
+    "\n",
+    "    final_pumpki = cv2.add(bg_black,bg_frame)\n",
+    "    frame[y: y + h, x: x + w] = final_pumpki\n",
+    "    \n",
+    "    #Aplicamos filtros al frame\n",
+    "  \n",
+    "    cv2.imshow('Halloween',frame)\n",
+    "    key = cv2.waitKey(1) & 0xFF\n",
+    "\n",
+    "  if key == 27:\n",
+    "      break\n",
+    "\n",
+    "\n",
+    "# Liberamos los recursos\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -159,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.5"
   },
   "vscode": {
    "interpreter": {
