--- a/V1_p4/VC_P4.ipynb
+++ b/V1_p4/VC_P4.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -171,14 +171,14 @@
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "could not broadcast input array from shape (219,219,4) into shape (0,219,3)",
+     "ename": "error",
+     "evalue": "OpenCV(4.8.1) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\core\\src\\arithm.cpp:230: error: (-215:Assertion failed) (mtype == CV_8U || mtype == CV_8S) && _mask.sameSize(*psrc1) in function 'cv::binary_op'\n",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\guill\\OneDrive\\Documentos\\VC\\VC\\V1_p4\\VC_P4.ipynb Cell 6\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m pumpkin_y \u001b[39m=\u001b[39m y \u001b[39m-\u001b[39m resized_image\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m \u001b[39m# Colocamos la calabaza en la cabeza\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m frame[pumpkin_y:pumpkin_y \u001b[39m+\u001b[39;49m resized_image\u001b[39m.\u001b[39;49mshape[\u001b[39m0\u001b[39;49m], pumpkin_x:pumpkin_x \u001b[39m+\u001b[39;49m resized_image\u001b[39m.\u001b[39;49mshape[\u001b[39m1\u001b[39;49m]] \u001b[39m=\u001b[39m resized_image\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m \u001b[39m#Aplicamos filtros al frame\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m cv2\u001b[39m.\u001b[39mimshow(\u001b[39m'\u001b[39m\u001b[39mHalloween\u001b[39m\u001b[39m'\u001b[39m,frame)\n",
-      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (219,219,4) into shape (0,219,3)"
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\guill\\OneDrive\\Documentos\\VC\\VC\\V1_p4\\VC_P4.ipynb Cell 6\u001b[0m line \u001b[0;36m7\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=73'>74</a>\u001b[0m bg_black\u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mbitwise_and(resized_image,resized_image,mask\u001b[39m=\u001b[39mmask)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=74'>75</a>\u001b[0m bg_black\u001b[39m=\u001b[39m bg_black[:,:,\u001b[39m0\u001b[39m:\u001b[39m3\u001b[39m]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=75'>76</a>\u001b[0m bg_frame \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mbitwise_and(n_frame,n_frame,mask\u001b[39m=\u001b[39;49mmask_inv)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=77'>78</a>\u001b[0m final_pumpki \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39madd(bg_black,bg_frame)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=78'>79</a>\u001b[0m frame[y: y \u001b[39m+\u001b[39m h, x: x \u001b[39m+\u001b[39m w]\u001b[39m=\u001b[39m final_pumpki\n",
+      "\u001b[1;31merror\u001b[0m: OpenCV(4.8.1) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\core\\src\\arithm.cpp:230: error: (-215:Assertion failed) (mtype == CV_8U || mtype == CV_8S) && _mask.sameSize(*psrc1) in function 'cv::binary_op'\n"
      ]
     }
    ],
@@ -187,8 +187,35 @@
     "import imutils #redimensionar\n",
     "import numpy as np\n",
     "\n",
+    "\n",
+    "def oscurecer_frame(frame):\n",
+    "    \"\"\"\n",
+    "    Oscurece un frame sin que pierda el RGB.\n",
+    "\n",
+    "    Args:\n",
+    "        frame: El frame a oscurecer.\n",
+    "\n",
+    "    Returns:\n",
+    "        El frame oscurecido.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Convertir el frame a escala de grises.\n",
+    "    img_gris = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    # Aplicar un filtro de suavizado.\n",
+    "    img_suavizado = cv2.GaussianBlur(img_gris, (5, 5), 0)\n",
+    "\n",
+    "    # Convertir el frame de escala de grises a RGB.\n",
+    "    img_rgb = cv2.cvtColor(img_suavizado, cv2.COLOR_GRAY2BGR)\n",
+    "\n",
+    "    # Multiplicar cada canal RGB por un factor.\n",
+    "    img_rgb[:, :, 0] = img_rgb[:, :, 0] * 0.7\n",
+    "    img_rgb[:, :, 1] = img_rgb[:, :, 1] * 0.7\n",
+    "    img_rgb[:, :, 2] = img_rgb[:, :, 2] * 0.7\n",
+    "\n",
+    "    return img_rgb\n",
     "cap = cv2.VideoCapture(0)\n",
-    "pumpkin = cv2.imread(\"pumpkin3.png\",cv2.IMREAD_UNCHANGED)\n",
+    "pumpkin = cv2.imread(\"spookyPumpki2.png\",cv2.IMREAD_UNCHANGED)\n",
     "#print('pumpkin.shape =',pumpkin.shape)\n",
     "#cv2.imshow('pumpkin',pumpkin[:,:,3])\n",
     "faceClassif = cv2.CascadeClassifier(cv2.data.haarcascades + \"haarcascade_frontalface_default.xml\")\n",
@@ -218,26 +245,29 @@
     " \n",
     "  for (x,y,w,h) in faces:\n",
     "    #cv2.rectangle(frame, (x - 50, y - 25), (x + w+50, y + h+25), (0, 255, 0), 2)\n",
-    "      #Redimensionar la imagen \n",
+    "    \n",
+    "    #Redimensionar la imagen \n",
     "    resized_image = imutils.resize(pumpkin,width=w,height=h)\n",
-    "    filas_img = resized_image.shape[0]\n",
-    "    col_img = w\n",
+    "\n",
+    "    #Aplicamos filtros para oscurecer la imagen\n",
+    "    frame = oscurecer_frame(frame);\n",
     "\n",
     "    n_frame = frame[y: y + h, x: x + w]\n",
+    "    #Establecemos la mascara para el video\n",
     "    mask = resized_image[:,:,3]\n",
     "    mask_inv=cv2.bitwise_not(mask)\n",
     "    bg_black= cv2.bitwise_and(resized_image,resized_image,mask=mask)\n",
     "    bg_black= bg_black[:,:,0:3]\n",
     "    bg_frame = cv2.bitwise_and(n_frame,n_frame,mask=mask_inv)\n",
     "\n",
-    "    #Sumamos las dos imagenes\n",
-    "\n",
     "    final_pumpki = cv2.add(bg_black,bg_frame)\n",
-    "    frame[y: y + h, x: x + w] = final_pumpki\n",
-    "    \n",
-    "    #Aplicamos filtros al frame\n",
-    "  \n",
+    "    frame[y: y + h, x: x + w]= final_pumpki\n",
+    "\n",
+    "\n",
+    "\n",
+    "    cv2.imshow('Frame',bg_black)\n",
     "    cv2.imshow('Halloween',frame)\n",
+    "\n",
     "    key = cv2.waitKey(1) & 0xFF\n",
     "\n",
     "  if key == 27:\n",
