--- a/V1_p4/VC_P4.ipynb
+++ b/V1_p4/VC_P4.ipynb
@@ -153,14 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -169,24 +162,11 @@
      "text": [
       "Camera 0\n"
      ]
-    },
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.8.1) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\core\\src\\arithm.cpp:230: error: (-215:Assertion failed) (mtype == CV_8U || mtype == CV_8S) && _mask.sameSize(*psrc1) in function 'cv::binary_op'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\guill\\OneDrive\\Documentos\\VC\\VC\\V1_p4\\VC_P4.ipynb Cell 6\u001b[0m line \u001b[0;36m7\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=73'>74</a>\u001b[0m bg_black\u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mbitwise_and(resized_image,resized_image,mask\u001b[39m=\u001b[39mmask)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=74'>75</a>\u001b[0m bg_black\u001b[39m=\u001b[39m bg_black[:,:,\u001b[39m0\u001b[39m:\u001b[39m3\u001b[39m]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=75'>76</a>\u001b[0m bg_frame \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mbitwise_and(n_frame,n_frame,mask\u001b[39m=\u001b[39;49mmask_inv)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=77'>78</a>\u001b[0m final_pumpki \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39madd(bg_black,bg_frame)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W5sZmlsZQ%3D%3D?line=78'>79</a>\u001b[0m frame[y: y \u001b[39m+\u001b[39m h, x: x \u001b[39m+\u001b[39m w]\u001b[39m=\u001b[39m final_pumpki\n",
-      "\u001b[1;31merror\u001b[0m: OpenCV(4.8.1) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\core\\src\\arithm.cpp:230: error: (-215:Assertion failed) (mtype == CV_8U || mtype == CV_8S) && _mask.sameSize(*psrc1) in function 'cv::binary_op'\n"
-     ]
     }
    ],
    "source": [
-    "import cv2\n",
     "import imutils #redimensionar\n",
     "import numpy as np\n",
-    "\n",
     "\n",
     "def oscurecer_frame(frame):\n",
     "    \"\"\"\n",
@@ -209,13 +189,14 @@
     "    img_rgb = cv2.cvtColor(img_suavizado, cv2.COLOR_GRAY2BGR)\n",
     "\n",
     "    # Multiplicar cada canal RGB por un factor.\n",
-    "    img_rgb[:, :, 0] = img_rgb[:, :, 0] * 0.7\n",
-    "    img_rgb[:, :, 1] = img_rgb[:, :, 1] * 0.7\n",
-    "    img_rgb[:, :, 2] = img_rgb[:, :, 2] * 0.7\n",
+    "    img_rgb[:, :, 0] = img_rgb[:, :, 0] * 0.3\n",
+    "    img_rgb[:, :, 1] = img_rgb[:, :, 1] * 0.3\n",
+    "    img_rgb[:, :, 2] = img_rgb[:, :, 2] * 0.3\n",
     "\n",
     "    return img_rgb\n",
+    "    \n",
     "cap = cv2.VideoCapture(0)\n",
-    "pumpkin = cv2.imread(\"spookyPumpki2.png\",cv2.IMREAD_UNCHANGED)\n",
+    "pumpkin = cv2.imread(\"spookyPumpki.png\",cv2.IMREAD_UNCHANGED)\n",
     "#print('pumpkin.shape =',pumpkin.shape)\n",
     "#cv2.imshow('pumpkin',pumpkin[:,:,3])\n",
     "faceClassif = cv2.CascadeClassifier(cv2.data.haarcascades + \"haarcascade_frontalface_default.xml\")\n",
@@ -238,6 +219,8 @@
     "\n",
     "while True:\n",
     "  ret, frame = cap.read()\n",
+    "  frame = oscurecer_frame(frame)\n",
+    "\n",
     "  if ret == False:\n",
     "    break\n",
     "  \n",
@@ -245,33 +228,37 @@
     " \n",
     "  for (x,y,w,h) in faces:\n",
     "    #cv2.rectangle(frame, (x - 50, y - 25), (x + w+50, y + h+25), (0, 255, 0), 2)\n",
-    "    \n",
     "    #Redimensionar la imagen \n",
-    "    resized_image = imutils.resize(pumpkin,width=w,height=h)\n",
     "\n",
+    "    resized_image = cv2.resize(pumpkin, (w, h), interpolation=cv2.INTER_AREA)\n",
+    "    \n",
     "    #Aplicamos filtros para oscurecer la imagen\n",
-    "    frame = oscurecer_frame(frame);\n",
     "\n",
     "    n_frame = frame[y: y + h, x: x + w]\n",
     "    #Establecemos la mascara para el video\n",
     "    mask = resized_image[:,:,3]\n",
-    "    mask_inv=cv2.bitwise_not(mask)\n",
+    "    mask = cv2.resize(mask, (w, h))\n",
+    "    # Invertir la máscara\n",
+    "    mask_inv = cv2.bitwise_not(mask)\n",
     "    bg_black= cv2.bitwise_and(resized_image,resized_image,mask=mask)\n",
     "    bg_black= bg_black[:,:,0:3]\n",
     "    bg_frame = cv2.bitwise_and(n_frame,n_frame,mask=mask_inv)\n",
+    "    #Resultado final y lo agregamos el frame\n",
+    "    final_pumpki = cv2.add(bg_black,bg_frame) \n",
     "\n",
-    "    final_pumpki = cv2.add(bg_black,bg_frame)\n",
+    "\n",
+    "    #Rotamos la imagen segun nuestra cara \n",
+    "    \n",
     "    frame[y: y + h, x: x + w]= final_pumpki\n",
     "\n",
+    "    \n",
     "\n",
+    "  cv2.imshow('Halloween',frame)\n",
     "\n",
-    "    cv2.imshow('Frame',bg_black)\n",
-    "    cv2.imshow('Halloween',frame)\n",
-    "\n",
-    "    key = cv2.waitKey(1) & 0xFF\n",
+    "  key = cv2.waitKey(1) & 0xFF\n",
     "\n",
     "  if key == 27:\n",
-    "      break\n",
+    "    break\n",
     "\n",
     "\n",
     "# Liberamos los recursos\n",
