Filtro Mascaras Halloween

--- a/V1_p4/VC_P4.ipynb
+++ b/V1_p4/VC_P4.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -104,6 +104,7 @@
     "                # Show detected facial elements\n",
     "                if imodoF > 0:\n",
     "                    for (x, y) in shape:\n",
+    "                        cv2.rectangle(frame, (x, y), (x + w, y + h), (255, 0, 0), 2)\n",
     "                        cv2.circle(frame, (x, y), 2, (255, 255, 255), -1)\n",
     "\n",
     "                cv2.circle(frame, ((int)(lex), (int)(ley)), 4, (0, 0, 255), -1)\n",
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -162,12 +163,52 @@
      "text": [
       "Camera 0\n"
      ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 3 is out of bounds for axis 2 with size 3",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\guill\\OneDrive\\Documentos\\VC\\VC\\V1_p4\\VC_P4.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=119'>120</a>\u001b[0m   resized_image \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mresize(mask_images[current_mask_index], (w, h), interpolation\u001b[39m=\u001b[39mcv2\u001b[39m.\u001b[39mINTER_AREA)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=121'>122</a>\u001b[0m   \u001b[39m#Aplicamos filtros para oscurecer la imagen\u001b[39;00m\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=123'>124</a>\u001b[0m   imgOnFrame \u001b[39m=\u001b[39m addPNG(frame,resized_image)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=125'>126</a>\u001b[0m \u001b[39m# Encuentra los landmarks faciales.\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=126'>127</a>\u001b[0m   gray \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mcvtColor(frame, cv2\u001b[39m.\u001b[39mCOLOR_BGR2GRAY)\n",
+      "\u001b[1;32mc:\\Users\\guill\\OneDrive\\Documentos\\VC\\VC\\V1_p4\\VC_P4.ipynb Cell 5\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m n_frame \u001b[39m=\u001b[39m frame[y: y \u001b[39m+\u001b[39m h, x: x \u001b[39m+\u001b[39m w]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39m#Establecemos la mascara para el video\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m mask \u001b[39m=\u001b[39m resized_image[:,:,\u001b[39m3\u001b[39;49m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39m# Invertir la máscara\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m mask_inv \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mbitwise_not(mask)\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 3 is out of bounds for axis 2 with size 3"
+     ]
     }
    ],
    "source": [
-    "import imutils #redimensionar\n",
+    "import dlib\n",
+    "from imutils import face_utils\n",
     "import numpy as np\n",
+    "import cv2\n",
+    "import FaceNormalizationUtils as faceutils\n",
     "\n",
+    "def AddDecorate(frame,resizedBat,x,y):\n",
+    "    \n",
+    "    resizedBatMask = resizedBat[:,:,0]\n",
+    "    regionFrame = frame[y:y+resizedBat.shape[0],x:x+resizedBat.shape[1]]\n",
+    "    BatMaskInv = cv2.bitwise_not(resizedBatMask)\n",
+    "    BgregionFrame = cv2.bitwise_and(regionFrame,regionFrame,mask=BatMaskInv)\n",
+    "    Bat = cv2.add(BgregionFrame,resizedBat)\n",
+    "    frame[y:y+resizedBat.shape[0],x:x+resizedBat.shape[1]] = Bat\n",
+    "\n",
+    "def addPNG(frame,resized_image):\n",
+    "    \n",
+    "    n_frame = frame[y: y + h, x: x + w]\n",
+    "    #Establecemos la mascara para el video\n",
+    "    mask = resized_image[:,:,3]\n",
+    "    # Invertir la máscara\n",
+    "    mask_inv = cv2.bitwise_not(mask)\n",
+    "    bg_black = cv2.bitwise_and(resized_image, resized_image, mask=mask)\n",
+    "    bg_black = bg_black[:, :, 0:3]\n",
+    "    bg_frame = cv2.bitwise_and(n_frame, n_frame, mask=mask_inv)\n",
+    "\n",
+    "    #Resultado final y lo agregamos el frame\n",
+    "    final_pumpki = cv2.add(bg_black,bg_frame) \n",
+    "    \n",
+    "    return final_pumpki\n",
+    "# My face detectors interface\n",
     "def oscurecer_frame(frame):\n",
     "    \"\"\"\n",
     "    Oscurece un frame sin que pierda el RGB.\n",
@@ -178,6 +219,7 @@
     "    Returns:\n",
     "        El frame oscurecido.\n",
     "    \"\"\"\n",
+    "    \n",
     "\n",
     "    # Convertir el frame a escala de grises.\n",
     "    img_gris = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
@@ -195,8 +237,23 @@
     "\n",
     "    return img_rgb\n",
     "    \n",
+    "def rotate_image(image, angle):\n",
+    "    center = tuple(np.array(image.shape[1::-1]) / 2)\n",
+    "    rot_mat = cv2.getRotationMatrix2D(center, angle, 1.0)\n",
+    "    rotated_image = cv2.warpAffine(image, rot_mat, image.shape[1::-1], flags=cv2.INTER_LINEAR)\n",
+    "    return rotated_image\n",
+    "\n",
+    "FDet = FaceDetectors.FaceDetector()\n",
     "cap = cv2.VideoCapture(0)\n",
-    "pumpkin = cv2.imread(\"spookyPumpki.png\",cv2.IMREAD_UNCHANGED)\n",
+    "\n",
+    "# Carga las imágenes de máscaras\n",
+    "mask_images = []\n",
+    "mask_images.append(cv2.imread(\"spookyPumpki2.png\",cv2.IMREAD_UNCHANGED))\n",
+    "mask_images.append(cv2.imread(\"esqueleto.png\",cv2.IMREAD_UNCHANGED))\n",
+    "mask_images.append(cv2.imread(\"scream.png\",cv2.IMREAD_UNCHANGED))\n",
+    "\n",
+    "current_mask_index = 0  # Índice de la máscara actual\n",
+    "\n",
     "#print('pumpkin.shape =',pumpkin.shape)\n",
     "#cv2.imshow('pumpkin',pumpkin[:,:,3])\n",
     "faceClassif = cv2.CascadeClassifier(cv2.data.haarcascades + \"haarcascade_frontalface_default.xml\")\n",
@@ -216,6 +273,8 @@
     "else:\n",
     "    print('Camera 0')\n",
     "\n",
+    "detector = dlib.get_frontal_face_detector()\n",
+    "predictor = dlib.shape_predictor(\"shape_predictor_68_face_landmarks.dat\")\n",
     "\n",
     "while True:\n",
     "  ret, frame = cap.read()\n",
@@ -225,33 +284,64 @@
     "    break\n",
     "  \n",
     "  faces = faceClassif.detectMultiScale(frame,1.3,5)\n",
-    " \n",
-    "  for (x,y,w,h) in faces:\n",
-    "    #cv2.rectangle(frame, (x - 50, y - 25), (x + w+50, y + h+25), (0, 255, 0), 2)\n",
+    "\n",
+    "  values = FDet.SingleFaceEyesDetection(frame, FDet.FaceDetectors[0], FDet.EyeDetectors[1])\n",
+    "\n",
+    "    # Detectamos las caras en el fotograma.\n",
+    "  if values is not None:\n",
+    "    face, eyes, shape = values\n",
+    "\n",
+    "  [x, y , w, h] = face\n",
+    "\n",
+    "  if x > -1:\n",
     "    #Redimensionar la imagen \n",
     "\n",
-    "    resized_image = cv2.resize(pumpkin, (w, h), interpolation=cv2.INTER_AREA)\n",
+    "    resized_image = cv2.resize(mask_images[current_mask_index], (w, h), interpolation=cv2.INTER_AREA)\n",
     "    \n",
     "    #Aplicamos filtros para oscurecer la imagen\n",
-    "\n",
-    "    n_frame = frame[y: y + h, x: x + w]\n",
-    "    #Establecemos la mascara para el video\n",
-    "    mask = resized_image[:,:,3]\n",
-    "    mask = cv2.resize(mask, (w, h))\n",
-    "    # Invertir la máscara\n",
-    "    mask_inv = cv2.bitwise_not(mask)\n",
-    "    bg_black= cv2.bitwise_and(resized_image,resized_image,mask=mask)\n",
-    "    bg_black= bg_black[:,:,0:3]\n",
-    "    bg_frame = cv2.bitwise_and(n_frame,n_frame,mask=mask_inv)\n",
-    "    #Resultado final y lo agregamos el frame\n",
-    "    final_pumpki = cv2.add(bg_black,bg_frame) \n",
-    "\n",
-    "\n",
-    "    #Rotamos la imagen segun nuestra cara \n",
     "    \n",
-    "    frame[y: y + h, x: x + w]= final_pumpki\n",
+    "    imgOnFrame = addPNG(frame,resized_image)\n",
     "\n",
-    "    \n",
+    "  # Encuentra los landmarks faciales.\n",
+    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "    rect = dlib.rectangle(int(x), int(y), int(x + w), int(y + h))\n",
+    "    shape = predictor(gray, rect)\n",
+    "    shape = face_utils.shape_to_np(shape)\n",
+    "\n",
+    "    # Encuentra los puntos clave de los ojos.\n",
+    "    left_eye = shape[36:42]\n",
+    "    right_eye = shape[42:48]\n",
+    "\n",
+    "   # Calcula el ángulo de inclinación de la cabeza.\n",
+    "    left_eye_center = left_eye.mean(axis=0).astype(\"int\")\n",
+    "    right_eye_center = right_eye.mean(axis=0).astype(\"int\")\n",
+    "    dY = left_eye_center[1] - right_eye_center[1]\n",
+    "    dX = left_eye_center[0] - right_eye_center[0]\n",
+    "\n",
+    "    # Calcula el ángulo de inclinación de la cabeza en función de la posición de los ojos.\n",
+    "    if right_eye[0][0] > left_eye[0][0]:\n",
+    "        # La cabeza está inclinada hacia la izquierda, rota en sentido contrario.\n",
+    "        angle = -np.degrees(np.arctan2(dY, dX))\n",
+    "    else:\n",
+    "        # La cabeza está inclinada hacia la derecha, rota en sentido normal.\n",
+    "        angle = np.degrees(np.arctan2(dY, dX))\n",
+    "\n",
+    "\n",
+    "    # Rota la máscara según el ángulo de la cabeza utilizando tu función\n",
+    "    rotated_mask = rotate_image(imgOnFrame, angle)\n",
+    "\n",
+    "    # Aplica una rotación adicional de 180 grados a la máscara para corregir la orientación\n",
+    "    rotated_mask = rotate_image(rotated_mask, 180)\n",
+    "\n",
+    "\n",
+    "    # Aplica la máscara rotada al frame\n",
+    "    frame[y: y + h, x: x + w] = rotated_mask\n",
+    "\n",
+    "  resizedBat= cv2.resize(cv2.imread(\"bat.png\"), (364//3,364//3), interpolation=cv2.INTER_AREA)\n",
+    "\n",
+    "  AddDecorate(frame,resizedBat,10,10)\n",
+    "  AddDecorate(frame,resizedBat,500,30)\n",
+    "\n",
     "\n",
     "  cv2.imshow('Halloween',frame)\n",
     "\n",
@@ -259,19 +349,15 @@
     "\n",
     "  if key == 27:\n",
     "    break\n",
+    "  elif key == 32:  # Barra espaciadora\n",
+    "        # Cambia a la siguiente máscara\n",
+    "        current_mask_index = (current_mask_index + 1) % len(mask_images)\n",
     "\n",
     "\n",
     "# Liberamos los recursos\n",
     "cap.release()\n",
-    "cv2.destroyAllWindows()\n"
+    "cv2.destroyAllWindows()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
