--- a/V1_p4/VC_P4.ipynb
+++ b/V1_p4/VC_P4.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,26 +154,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Camera 0\n"
+      "Camera 0\n",
+      "1/1 [==============================] - 0s 254ms/step\n",
+      "1/1 [==============================] - 0s 101ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 18ms/step\n",
+      "1/1 [==============================] - 0s 20ms/step\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "1/1 [==============================] - 0s 14ms/step\n",
+      "1/1 [==============================] - ETA: 0s"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "index 3 is out of bounds for axis 2 with size 3",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\guill\\OneDrive\\Documentos\\VC\\VC\\V1_p4\\VC_P4.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=119'>120</a>\u001b[0m   resized_image \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mresize(mask_images[current_mask_index], (w, h), interpolation\u001b[39m=\u001b[39mcv2\u001b[39m.\u001b[39mINTER_AREA)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=121'>122</a>\u001b[0m   \u001b[39m#Aplicamos filtros para oscurecer la imagen\u001b[39;00m\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=123'>124</a>\u001b[0m   imgOnFrame \u001b[39m=\u001b[39m addPNG(frame,resized_image)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=125'>126</a>\u001b[0m \u001b[39m# Encuentra los landmarks faciales.\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=126'>127</a>\u001b[0m   gray \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mcvtColor(frame, cv2\u001b[39m.\u001b[39mCOLOR_BGR2GRAY)\n",
-      "\u001b[1;32mc:\\Users\\guill\\OneDrive\\Documentos\\VC\\VC\\V1_p4\\VC_P4.ipynb Cell 5\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m n_frame \u001b[39m=\u001b[39m frame[y: y \u001b[39m+\u001b[39m h, x: x \u001b[39m+\u001b[39m w]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39m#Establecemos la mascara para el video\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m mask \u001b[39m=\u001b[39m resized_image[:,:,\u001b[39m3\u001b[39;49m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39m# Invertir la máscara\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m mask_inv \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mbitwise_not(mask)\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 3 is out of bounds for axis 2 with size 3"
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\guill\\OneDrive\\Documentos\\VC\\VC\\V1_p4\\VC_P4.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=106'>107</a>\u001b[0m   \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=108'>109</a>\u001b[0m faces \u001b[39m=\u001b[39m faceClassif\u001b[39m.\u001b[39mdetectMultiScale(frame,\u001b[39m1.3\u001b[39m,\u001b[39m5\u001b[39m)\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=110'>111</a>\u001b[0m values \u001b[39m=\u001b[39m FDet\u001b[39m.\u001b[39;49mSingleFaceEyesDetection(frame, FDet\u001b[39m.\u001b[39;49mFaceDetectors[\u001b[39m3\u001b[39;49m], FDet\u001b[39m.\u001b[39;49mEyeDetectors[\u001b[39m1\u001b[39;49m])\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=112'>113</a>\u001b[0m   \u001b[39m# Detectamos las caras en el fotograma.\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p4/VC_P4.ipynb#W4sZmlsZQ%3D%3D?line=113'>114</a>\u001b[0m \u001b[39mif\u001b[39;00m values \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\guill\\OneDrive\\Documentos\\VC\\VC\\V1_p4\\FaceDetectors.py:354\u001b[0m, in \u001b[0;36mFaceDetector.SingleFaceEyesDetection\u001b[1;34m(self, img, facedet, eyesdet)\u001b[0m\n\u001b[0;32m    351\u001b[0m     \u001b[39mreturn\u001b[39;00m face, eyes, shape\n\u001b[0;32m    353\u001b[0m \u001b[39melif\u001b[39;00m facedet \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mMTCNN\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m--> 354\u001b[0m     values \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mDetectLargestFaceEyesMTCNN(img)\n\u001b[0;32m    356\u001b[0m     \u001b[39mif\u001b[39;00m values \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    357\u001b[0m         face, eyes, shape \u001b[39m=\u001b[39m values\n",
+      "File \u001b[1;32mc:\\Users\\guill\\OneDrive\\Documentos\\VC\\VC\\V1_p4\\FaceDetectors.py:311\u001b[0m, in \u001b[0;36mFaceDetector.DetectLargestFaceEyesMTCNN\u001b[1;34m(self, img)\u001b[0m\n\u001b[0;32m    309\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mDetectLargestFaceEyesMTCNN\u001b[39m(\u001b[39mself\u001b[39m, img):\n\u001b[1;32m--> 311\u001b[0m     results \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdetectormtcnn\u001b[39m.\u001b[39;49mdetect_faces(img)\n\u001b[0;32m    313\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m results \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    314\u001b[0m         index \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgetLargestMTCNNBB(results)\n",
+      "File \u001b[1;32mc:\\Users\\guill\\anaconda3\\envs\\VC_P1\\Lib\\site-packages\\mtcnn\\mtcnn.py:300\u001b[0m, in \u001b[0;36mMTCNN.detect_faces\u001b[1;34m(self, img)\u001b[0m\n\u001b[0;32m    298\u001b[0m \u001b[39m# We pipe here each of the stages\u001b[39;00m\n\u001b[0;32m    299\u001b[0m \u001b[39mfor\u001b[39;00m stage \u001b[39min\u001b[39;00m stages:\n\u001b[1;32m--> 300\u001b[0m     result \u001b[39m=\u001b[39m stage(img, result[\u001b[39m0\u001b[39;49m], result[\u001b[39m1\u001b[39;49m])\n\u001b[0;32m    302\u001b[0m [total_boxes, points] \u001b[39m=\u001b[39m result\n\u001b[0;32m    304\u001b[0m bounding_boxes \u001b[39m=\u001b[39m []\n",
+      "File \u001b[1;32mc:\\Users\\guill\\anaconda3\\envs\\VC_P1\\Lib\\site-packages\\mtcnn\\mtcnn.py:410\u001b[0m, in \u001b[0;36mMTCNN.__stage2\u001b[1;34m(self, img, total_boxes, stage_status)\u001b[0m\n\u001b[0;32m    407\u001b[0m tempimg \u001b[39m=\u001b[39m (tempimg \u001b[39m-\u001b[39m \u001b[39m127.5\u001b[39m) \u001b[39m*\u001b[39m \u001b[39m0.0078125\u001b[39m\n\u001b[0;32m    408\u001b[0m tempimg1 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mtranspose(tempimg, (\u001b[39m3\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m))\n\u001b[1;32m--> 410\u001b[0m out \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_rnet\u001b[39m.\u001b[39;49mpredict(tempimg1)\n\u001b[0;32m    412\u001b[0m out0 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mtranspose(out[\u001b[39m0\u001b[39m])\n\u001b[0;32m    413\u001b[0m out1 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mtranspose(out[\u001b[39m1\u001b[39m])\n",
+      "File \u001b[1;32mc:\\Users\\guill\\anaconda3\\envs\\VC_P1\\Lib\\site-packages\\keras\\utils\\traceback_utils.py:65\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     63\u001b[0m filtered_tb \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     64\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 65\u001b[0m     \u001b[39mreturn\u001b[39;00m fn(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m     66\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n",
+      "File \u001b[1;32mc:\\Users\\guill\\anaconda3\\envs\\VC_P1\\Lib\\site-packages\\keras\\engine\\training.py:2379\u001b[0m, in \u001b[0;36mModel.predict\u001b[1;34m(self, x, batch_size, verbose, steps, callbacks, max_queue_size, workers, use_multiprocessing)\u001b[0m\n\u001b[0;32m   2377\u001b[0m batch_outputs \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m   2378\u001b[0m \u001b[39mfor\u001b[39;00m _, iterator \u001b[39min\u001b[39;00m data_handler\u001b[39m.\u001b[39menumerate_epochs():  \u001b[39m# Single epoch.\u001b[39;00m\n\u001b[1;32m-> 2379\u001b[0m     \u001b[39mwith\u001b[39;49;00m data_handler\u001b[39m.\u001b[39;49mcatch_stop_iteration():\n\u001b[0;32m   2380\u001b[0m         \u001b[39mfor\u001b[39;49;00m step \u001b[39min\u001b[39;49;00m data_handler\u001b[39m.\u001b[39;49msteps():\n\u001b[0;32m   2381\u001b[0m             callbacks\u001b[39m.\u001b[39;49mon_predict_batch_begin(step)\n",
+      "File \u001b[1;32mc:\\Users\\guill\\anaconda3\\envs\\VC_P1\\Lib\\contextlib.py:144\u001b[0m, in \u001b[0;36m_GeneratorContextManager.__exit__\u001b[1;34m(self, typ, value, traceback)\u001b[0m\n\u001b[0;32m    142\u001b[0m \u001b[39mif\u001b[39;00m typ \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    143\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 144\u001b[0m         \u001b[39mnext\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgen)\n\u001b[0;32m    145\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mStopIteration\u001b[39;00m:\n\u001b[0;32m    146\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mFalse\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\guill\\anaconda3\\envs\\VC_P1\\Lib\\site-packages\\keras\\engine\\data_adapter.py:1347\u001b[0m, in \u001b[0;36mDataHandler.catch_stop_iteration\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1345\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m   1346\u001b[0m     \u001b[39myield\u001b[39;00m\n\u001b[1;32m-> 1347\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msync()\n\u001b[0;32m   1348\u001b[0m \u001b[39mexcept\u001b[39;00m (\u001b[39mStopIteration\u001b[39;00m, tf\u001b[39m.\u001b[39merrors\u001b[39m.\u001b[39mOutOfRangeError):\n\u001b[0;32m   1349\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_inferred_steps \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\guill\\anaconda3\\envs\\VC_P1\\Lib\\site-packages\\keras\\engine\\data_adapter.py:1337\u001b[0m, in \u001b[0;36mDataHandler.sync\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1336\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msync\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m-> 1337\u001b[0m     context\u001b[39m.\u001b[39;49masync_wait()\n",
+      "File \u001b[1;32mc:\\Users\\guill\\anaconda3\\envs\\VC_P1\\Lib\\site-packages\\tensorflow\\python\\eager\\context.py:2690\u001b[0m, in \u001b[0;36masync_wait\u001b[1;34m()\u001b[0m\n\u001b[0;32m   2688\u001b[0m   \u001b[39mreturn\u001b[39;00m\n\u001b[0;32m   2689\u001b[0m \u001b[39mif\u001b[39;00m context()\u001b[39m.\u001b[39m_context_handle \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:  \u001b[39m# pylint: disable=protected-access\u001b[39;00m\n\u001b[1;32m-> 2690\u001b[0m   context()\u001b[39m.\u001b[39;49msync_executors()\n",
+      "File \u001b[1;32mc:\\Users\\guill\\anaconda3\\envs\\VC_P1\\Lib\\site-packages\\tensorflow\\python\\eager\\context.py:712\u001b[0m, in \u001b[0;36mContext.sync_executors\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    700\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Sync both local executors and the ones on remote workers.\u001b[39;00m\n\u001b[0;32m    701\u001b[0m \n\u001b[0;32m    702\u001b[0m \u001b[39mIn async execution mode, local function calls can return before the\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    709\u001b[0m \u001b[39m  ValueError: if context is not initialized.\u001b[39;00m\n\u001b[0;32m    710\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    711\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_context_handle:\n\u001b[1;32m--> 712\u001b[0m   pywrap_tfe\u001b[39m.\u001b[39;49mTFE_ContextSyncExecutors(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_context_handle)\n\u001b[0;32m    713\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    714\u001b[0m   \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mContext is not initialized.\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -187,6 +208,7 @@
     "def AddDecorate(frame,resizedBat,x,y):\n",
     "    \n",
     "    resizedBatMask = resizedBat[:,:,0]\n",
+    "    cv2.imshow(\"2\",resized_image)\n",
     "    regionFrame = frame[y:y+resizedBat.shape[0],x:x+resizedBat.shape[1]]\n",
     "    BatMaskInv = cv2.bitwise_not(resizedBatMask)\n",
     "    BgregionFrame = cv2.bitwise_and(regionFrame,regionFrame,mask=BatMaskInv)\n",
@@ -198,6 +220,8 @@
     "    n_frame = frame[y: y + h, x: x + w]\n",
     "    #Establecemos la mascara para el video\n",
     "    mask = resized_image[:,:,3]\n",
+    "    cv2.imshow(\"1\",mask)\n",
+    "\n",
     "    # Invertir la máscara\n",
     "    mask_inv = cv2.bitwise_not(mask)\n",
     "    bg_black = cv2.bitwise_and(resized_image, resized_image, mask=mask)\n",
